tests/ui/does-nothing.rs
fn main() { println!("doing"); this_does_nothing_what_the; println!("boing"); }
//~^ ERROR cannot find value `this_does_nothing_what_the` in this scope
